--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,6 +26,10 @@
     </div>
     <ion-button type="submit" class="botONE" [routerLink]="['/analisis']">Ingrese</ion-button>
   </form>
+  <br><br>
+  <div class="example-button-row">
+    <ion-button (click)="logout()">Logout</ion-button>
+  </div>
 </ion-content>
   
 
