--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -13,25 +13,24 @@
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-<br>
-    <ion-button (click)="saveDate()" class="listobutton">Guardar</ion-button>
-  </form>
-  <ion-button  class="botONE" [routerLink]="['/analisis']">Volver atrás</ion-button>
+      <br>
+      <!-- <ion-button (click)="saveDate()" class="listobutton">Guardar</ion-button>
+      </form>
+      <ion-button  class="botONE" [routerLink]="['/analisis']">Volver atrás</ion-button>-->
 
 
-<div *ngIf="mostrarMensajefecha">
-  <ion-item style="padding-top: 20px;">
-    <ion-card>
-      <ion-card-header>
-         Escoge una fecha para tu cita
-      </ion-card-header>
-      <ion-card-content>
-          Dentro de los tips en "Ayuda" te sugerí que organices tu tiempo. 
-          <br><br>
-          Define una fecha para una ocación, es un paso más para lograr organizarte.<br>
-          No podrás escribirnos el motivo de la fecha, ya que es algo personal, tuyo.
-      </ion-card-content>
-    </ion-card>
-  </ion-item>
-</div>
-</ion-content>
+  <div *ngIf="mostrarMensajefecha">
+    <ion-item style="padding-top: 20px;">
+      <ion-card>
+        <ion-card-header>
+          Escoge una fecha para tu cita
+        </ion-card-header>
+        <ion-card-content>
+            Dentro de los tips en "Ayuda" te sugerí que organices tu tiempo. 
+            <br><br>
+            Define una fecha para una ocación, es un paso más para lograr organizarte.<br>
+            No podrás escribirnos el motivo de la fecha, ya que es algo personal, tuyo.
+        </ion-card-content>
+      </ion-card>
+    </ion-item>
+  </div>
