listo esta la incorporacion de ionic storage

--- a/src/app/analisis/analisis.page.html
+++ b/src/app/analisis/analisis.page.html
@@ -297,5 +297,7 @@
 </div>
 <ion-img src="assets/img/organizate.png" alt="Descripción de la imagen" [routerLink]="['/calendario']"class="animation"/>
 <br><br><br><br><br><br><br><br>
-
+<div class="example-button-row">
+  <ion-button (click)="logout()">Logout</ion-button>
+</div>
 </ion-content>
